# deepseek-sdk

./: .gitignore  Cargo.toml  README.md
src/: client.rs  errors.rs  lib.rs
src/schema/: message.rs  mod.rs  request.rs  response.rs  tool.rs
